# FastAPI_CICD

./: .gitignore  Dockerfile  docker-compose.yml  env_api.sh  main.py  pyproject.toml  requirement.txt  requirements.txt  setup.cfg
.github/workflows/: cd.yml  ci.yml  deploy.yml
analytics_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/: main.py
backend/utils/: helper.py  prompt.py  store_index.py
docs/: Naming_convention.md  README.md
frontend/: chat_interface.py
infrastructure/kubernetes/: deployment.yaml  service.yaml
infrastructure/terraform/: .terraform.lock.hcl  backend.tf  env_variable.sh  main.tf  providers.tf  random.tf  terraform.tfvars  variables.tf
notebook/: RAG.ipynb
scripts/: deploy.sh
tests/: test_main.py
